--- a/Morbot/Morbot/Morbot.csproj
+++ b/Morbot/Morbot/Morbot.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="DSharpPlus" Version="3.1.2" />
+    <PackageReference Include="DSharpPlus.CommandsNext" Version="3.1.2" />
     <PackageReference Include="Google.Apis.YouTube.v3" Version="1.29.1.991" />
   </ItemGroup>
 
