--- a/.gitignore
+++ b/.gitignore
@@ -262,3 +262,5 @@ __pycache__/
 /Morbot/Morbot/token
 /Morbot/Morbot/ytapikey
 /Morbot/Morbot/Thumbs.db
+/Morbot/Morbot/openwapikey
+/Morbot/Morbot/giphyapikey
