--- a/Morbot/Morbot/Morbot.csproj
+++ b/Morbot/Morbot/Morbot.csproj
@@ -6,8 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DSharpPlus" Version="3.1.2" />
-    <PackageReference Include="DSharpPlus.CommandsNext" Version="3.1.2" />
+    <PackageReference Include="DSharpPlus" Version="3.2.0-beta-00305" />
+    <PackageReference Include="DSharpPlus.CommandsNext" Version="3.2.0-beta-00305" />
     <PackageReference Include="Google.Apis.YouTube.v3" Version="1.29.2.991" />
   </ItemGroup>
 
