--- a/Morbot/Morbot/Morbot.csproj
+++ b/Morbot/Morbot/Morbot.csproj
@@ -1,15 +1,29 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp1.1</TargetFramework>
+    <OutputType>exe</OutputType>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
     <PostBuildEvent></PostBuildEvent>
+    <ApplicationIcon />
+    <OutputTypeEx>exe</OutputTypeEx>
+    <StartupObject />
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" />
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <PlatformTarget>x64</PlatformTarget>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DSharpPlus" Version="3.2.2-beta-00314" />
-    <PackageReference Include="DSharpPlus.CommandsNext" Version="3.2.2-beta-00314" />
-    <PackageReference Include="Google.Apis.YouTube.v3" Version="1.29.2.991" />
+    <PackageReference Include="DSharpPlus" Version="4.0.0-beta-00332" />
+    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.0.0-beta-00332" />
+    <PackageReference Include="DSharpPlus.VoiceNext" Version="4.0.0-beta-00332" />
+    <PackageReference Include="Google.Apis.YouTube.v3" Version="1.29.2.1006" />
   </ItemGroup>
 
 </Project>
