--- a/.gitignore
+++ b/.gitignore
@@ -270,3 +270,5 @@ __pycache__/
 /Morbot/Morbot/temp.mp3
 /Morbot/Morbot/youtube.exe
 /Morbot/Morbot/dump.txt
+/Morbot/Morbot/temp.jpg
+/Morbot/Morbot/tempedited.jpg
