--- a/.gitignore
+++ b/.gitignore
@@ -271,4 +271,5 @@ __pycache__/
 /Morbot/Morbot/youtube.exe
 /Morbot/Morbot/dump.txt
 /Morbot/Morbot/temp.jpg
-/Morbot/Morbot/tempedited.jpg
+/Morbot/Morbot/tttie.PNG
+/Morbot/Morbot/compressed.jpg
