--- a/.gitignore
+++ b/.gitignore
@@ -274,3 +274,6 @@ __pycache__/
 /Morbot/Morbot/tttie.PNG
 /Morbot/Morbot/compressed.jpg
 /Morbot/Morbot/tttie2.PNG
+/Morbot/Morbot/template.png
+/Morbot/Morbot/pre.png
+/Morbot/Morbot/message.png
