--- a/.gitignore
+++ b/.gitignore
@@ -277,3 +277,7 @@ __pycache__/
 /Morbot/Morbot/template.png
 /Morbot/Morbot/pre.png
 /Morbot/Morbot/message.png
+/Morbot/Morbot/tshp.jpg
+/Morbot/Morbot/emoji.png
+/Morbot/Morbot/SiteShoter.cfg
+/Morbot/Morbot/SiteShoter.exe
