--- a/Morbot/Morbot/Morbot.csproj
+++ b/Morbot/Morbot/Morbot.csproj
@@ -20,11 +20,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DSharpPlus" Version="4.0.0-beta-00353" />
-    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.0.0-beta-00353" />
-    <PackageReference Include="DSharpPlus.VoiceNext" Version="4.0.0-beta-00353" />
+    <PackageReference Include="CoreCompat.System.Drawing.v2" Version="5.2.0-preview1-r131" />
+    <PackageReference Include="DSharpPlus" Version="4.0.0-beta-00364" />
+    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.0.0-beta-00364" />
+    <PackageReference Include="DSharpPlus.VoiceNext" Version="4.0.0-beta-00364" />
     <PackageReference Include="Google.Apis.YouTube.v3" Version="1.30.0.1035" />
-    <PackageReference Include="Magick.NET-Q16-AnyCPU" Version="7.0.7.900" />
+    <PackageReference Include="Magick.NET-Q16-AnyCPU" Version="7.1.0" />
   </ItemGroup>
 
 </Project>
