--- a/.gitignore
+++ b/.gitignore
@@ -281,3 +281,8 @@ __pycache__/
 /Morbot/Morbot/emoji.png
 /Morbot/Morbot/SiteShoter.cfg
 /Morbot/Morbot/SiteShoter.exe
+/Morbot/Morbot/tempanime.jpg
+/Morbot/Morbot/screenshot.png
+/Morbot/Morbot/anime.png
+/Morbot/Morbot/anime.jpg
+/Morbot/Morbot/watermark.png
