--- a/Morbot/Morbot/Morbot.csproj
+++ b/Morbot/Morbot/Morbot.csproj
@@ -6,7 +6,7 @@
     <PostBuildEvent></PostBuildEvent>
     <ApplicationIcon />
     <OutputTypeEx>exe</OutputTypeEx>
-    <StartupObject />
+    <StartupObject>Morbot.Program</StartupObject>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" />
@@ -17,13 +17,15 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <PlatformTarget>x64</PlatformTarget>
+    <Optimize>false</Optimize>
+    <DefineConstants>NETCOREAPP2_0</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="CoreCompat.System.Drawing.v2" Version="5.2.0-preview1-r131" />
-    <PackageReference Include="DSharpPlus" Version="4.0.0-beta-00364" />
-    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.0.0-beta-00364" />
-    <PackageReference Include="DSharpPlus.VoiceNext" Version="4.0.0-beta-00364" />
+    <PackageReference Include="DSharpPlus" Version="4.0.0-beta-00367" />
+    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.0.0-beta-00367" />
+    <PackageReference Include="DSharpPlus.VoiceNext" Version="4.0.0-beta-00367" />
     <PackageReference Include="Google.Apis.YouTube.v3" Version="1.30.0.1035" />
     <PackageReference Include="Magick.NET-Q16-AnyCPU" Version="7.1.0" />
   </ItemGroup>
