--- a/.gitignore
+++ b/.gitignore
@@ -286,3 +286,10 @@ __pycache__/
 /Morbot/Morbot/anime.png
 /Morbot/Morbot/anime.jpg
 /Morbot/Morbot/watermark.png
+/Morbot/Morbot/links/Černá paní bez vyspání
+/Morbot/Morbot/links/TTtie
+/Morbot/Morbot/links/TechAndOSWorldSite
+/Morbot/Morbot/links/Novinky
+/Morbot/Morbot/links/MorcSite
+/Morbot/Morbot/links/MorbotInvite
+/Morbot/Morbot/links/MorbotGitHub
