--- a/.gitignore
+++ b/.gitignore
@@ -293,3 +293,5 @@ __pycache__/
 /Morbot/Morbot/links/MorcSite
 /Morbot/Morbot/links/MorbotInvite
 /Morbot/Morbot/links/MorbotGitHub
+/Morbot/Morbot/avatar.png
+/Morbot/Morbot/morbot_image.png
