--- a/.gitignore
+++ b/.gitignore
@@ -295,3 +295,4 @@ __pycache__/
 /Morbot/Morbot/links/MorbotGitHub
 /Morbot/Morbot/avatar.png
 /Morbot/Morbot/morbot_image.png
+/Morbot/Morbot/links
